# relearn-rs

./: Cargo.toml  LICENSE  Makefile  README.md  openapi.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/configs/: daily_progress_config.rs  mod.rs  user_config.rs
cli/src/init/: add_to_rc.rs  mod.rs
cli/src/learn/: mod.rs
cli/src/learn/assets/: questions.json
cli/src/reset/: mod.rs
generated-rust-client/.openapi-generator/: FILES
generated-rust-client/docs/: Health.md  Question.md  RelernApi.md
generated-rust-client/src/apis/: configuration.rs  relern_api.rs
generated-rust-client/src/models/: answer.rs  health.rs  mod.rs  question.rs
generated-rust-server/: Cargo.toml  README.md
generated-rust-server/api/: openapi.yaml
generated-rust-server/docs/: Answer.md  Health.md  Question.md
generated-rust-server/examples/client/: main.rs
generated-rust-server/examples/server/: main.rs  server.rs
generated-rust-server/src/: lib.rs  models.rs
generated-rust-server/src/client/: mod.rs
generated-rust-server/src/server/: mod.rs
sdk/: Cargo.toml  README.md  git_push.sh
sdk/.openapi-generator/: FILES
sdk/docs/: Answer.md
sdk/src/apis/: configuration.rs  mod.rs  relern_api.rs
sdk/src/models/: answer.rs  health.rs  question.rs
server/: Cargo.toml  README.md
server/.openapi-generator/: FILES
server/api/: openapi.yaml
server/docs/: relern_api.md
server/src/: lib.rs  models.rs
server/src/client/: mod.rs
src/: main.rs
src/configs/: user_config.rs
src/init/: add_to_rc.rs  mod.rs
src/learn/: mod.rs
src/request/: mod.rs
(+6 files in other folders)
