[package]
name = "rlrn"
version = "0.3.0"
description = "CLI tool for learning Rust effectively"
keywords = ["cli", "learning", "SRS", "spaced-repetition", "quiz"]
edition = "2021"
license = "MIT"
repository = "https://github.com/torcoste/relearn-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rlrn"
path = "src/main.rs"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rand]
version = "0.8"

[dependencies.clap]
version = "4.0.7"
features = ["derive"]

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["termion-backend"]

[dependencies.confy]
version = "0.5.0"

[dependencies.chrono]
version = "0.4.22"
